[package]
name = "filter"
version = "0.0.1"
authors = ["TinyKube Devs"]
license = "MIT"
edition = "2021"

[dependencies]
wit-bindgen = "0.22"
tinykube_wasm_sdk = { version = "=0.2.0-20250813-sdk-update2-a31ab25", registry="azure-vscode-tinykube" }
serde = { version = "1", features = [
	"derive",
	"rc",
] }
serde_json = { version = "1.0", default-features = false, features = [
	"alloc",
] }
jsonschema = { version = "0.8", default-features = false}
once_cell = "1.17.1"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
